--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,6 @@
             <version>2.1</version>
         </dependency>
 
-
         <!-- Jackson for JSON Handling -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -82,6 +81,13 @@
         </dependency>
 
 
+<!--        &lt;!&ndash; Maven &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.vertx</groupId>-->
+<!--            <artifactId>vertx-json-schema</artifactId>-->
+<!--            <version>4.5.14</version>-->
+<!--        </dependency>-->
+
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -89,6 +95,12 @@
             <version>1.5.16</version>
             <scope>compile</scope>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.networknt</groupId>-->
+<!--            <artifactId>json-schema-validator</artifactId>-->
+<!--            <version>1.0.78</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
